--- a/index.html
+++ b/index.html
@@ -340,25 +340,32 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Data Science Program, Scholarship</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>ALX Africa, Hybrid, Cairo</em></p>
+              <h4>Master of Science in Data Science</h4>
+              <h5>2022 - 2023</h5>
+              <p><em>University of Sunderland, Sunderland, UK</em></p>
               <p>
-                An intensive, hands-on training program focused on core data science skills,
-                including Python, SQL, statistics, machine learning, and data visualization.
-                Designed to develop job-ready professionals through real-world projects and collaborative learning.
+                Gained advanced knowledge in data science, covering statistical analysis, data manipulation, and end-to-end workflows. 
+                Developed strong programming skills in Python and R for analytical tasks, 
+                with practical experience in SQL for managing and querying databases. 
+                Studied specialized areas including Natural Language Processing (NLP) and Computer Vision,
+                 and acquired a solid foundation in Big Data technologies and cloud computing.
+                  The program integrated theory with real-world applications,
+                   preparing me to deliver data-driven solutions in diverse environments.
               </p>
             </div>
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Science</h4>
-              <h5>2022 - 2026</h5>
-              <p><em>Tanta University, Tanta, EG</em></p>
+              <h4>Bachelor of Engineering in Computer and Communications</h4>
+              <h5>2017 - 2022</h5>
+              <p><em>Al-Zaytoonah University, Amman, Jordan</em></p>
               <p>
-                Pursuing a strong academic foundation in biological sciences with a focus on microbiology.
-                Developed analytical thinking, laboratory skills, and a scientific approach to
-                problem-solving—forming a solid base for transitioning into data science and analytical roles.
+                Provided a strong foundation in core engineering principles, focusing on computer systems, programming, 
+                and network communications. Developed technical skills in algorithm design, software development, systems analysis, 
+                and data structures, with additional coursework in mathematics and statistics. Gained expertise in embedded systems, 
+                operating systems, C++, Java, and database management. This interdisciplinary background in computing, electronics, 
+                and communication systems laid the foundation for my transition into Data Science, enhancing my problem-solving and 
+                analytical skills for data-driven challenges.
               </p>
             </div>
             <!-- Edn Resume Item -->
@@ -367,60 +374,98 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Freelance Data Analyst</h4>
-              <h5>2024 - Present</h5>
-              <p><em>Remote </em></p>
+              <h4>Data Analyst for Planning, Monitoring, and Research (PMR)</h4>
+              <h5>Oct 2024 - Apr 2025</h5>
+              <p><em>UNICEF, Amman, Jordan </em></p>
               <ul>
                 <li>
-                  Collected, cleaned, and analyzed complex datasets to uncover actionable insights
-                  for clients across various industries.
+                  Boosted data accessibility by 30% by developing and deploying interactive Power BI dashboards and infographics, 
+                  enabling faster decision-making for global and local teams across 10+ countries.
                 </li>
                 <li>
-                  Built interactive dashboards and reports using tools like Excel, Power BI,
-                  and Tableau to support data-driven decision-making.
+                  Consolidated 300+ indicators into a centralized Excel-based child/gender database by analyzing and mapping key sources (DHS, VAF, JMP), 
+                  streamlining access and cross-sector analysis for program teams.
                 </li>
                 <li>
-                  Applied statistical analysis and predictive modeling techniques to
-                  solve real-world business problems.
-                </li>
-                <li>
-                  Collaborated with clients to define project goals, deliver clear data narratives,
-                  and meet tight deadlines with high-quality results.
+                  Improved planning efficiency by 35% and accelerated project delivery by 25% through 
+                  data validation and visualization using Power BI, Excel, and ArcGIS, enhancing stakeholder collaboration and reporting.
                 </li>
               </ul>
             </div>
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Analyst & Power BI Developer</h4>
-              <h5>Apr. 2024 - Oct. 2024</h5>
-              <p><em>DEPI, Hybrid, Tanta</em></p>
+              <h4>Data Analytics and Professional Career Development</h4>
+              <h5>Oct 2024 - Apr 2025</h5>
+              <p><em>Correlation One - USA (Remote)</em></p>
               <ul>
                 <li>
-                  Developed numerous marketing programs (logos,
-                  brochures,infographics, presentations, and advertisements).
+                  Completed a competitive data analytics program (10% acceptance rate), mastering Python, SQL, data visualization, 
+                  and storytelling through real-world case studies and collaborative projects with diverse global teams.
                 </li>
                 <li>
-                  Managed up to 5 projects or tasks at a given time while
-                  under pressure
-                </li>
-                <li>
-                  Recommended and consulted with clients on the most
-                  appropriate graphic design
-                </li>
-                <li>
-                  Created 4+ design presentations and proposals a month for
-                  clients and account managers
+                  Led end-to-end data project using exploratory data analysis (EDA), hypothesis testing, 
+                  and dashboard creation to deliver actionable insights and present recommendations to industry professionals.
                 </li>
               </ul>
             </div>
             <!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Data Scientist</h4>
+              <h5>Sep 2024 - Oct 2024</h5>
+              <p><em>Code Alpha (Remote)</em></p>
+              <ul>
+                <li>
+                  Created a Car Price Estimation model using Ridge and Lasso regression, achieving 98% model accuracy and reducing prediction error by 18%, 
+                  enabling better pricing strategies for over 5,000 vehicle listings.
+                </li>
+                <li>
+                  Engineered machine learning models including Iris Flower Classification (96.67% accuracy), and Advertising Impact on Sales utilizing Python (Pandas, Scikit-learn), 
+                  EDA, and regression techniques to refine business forecasting and decision-making.
+                </li>
+              </ul>
+            </div>
+            <!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Machine Learning Engineer</h4>
+              <h5>Aug 2024 - Sep 2024</h5>
+              <p><em>Techno Hacks Edu Tech (Remote)</em></p>
+              <ul>
+                <li>
+                  Implemented predictive models: XGBoost for housing prices (R² = 0.91), 
+                  SVM for diabetes detection (AUC = 0.84), and ensemble NLP classifier for sentiment analysis (89% accuracy).
+                </li>
+                <li>
+                  Executed full ML pipeline: EDA, feature engineering, scaling, tuning, and visualization (ROC, heatmaps, confusion matrix).
+                </li>
+              </ul>
+            </div>
+            <!-- End Resume Item -->
+
+            <div class="resume-item">
+              <h4>Data Scientist</h4>
+              <h5>Jul 2024 - Aug 2024</h5>
+              <p><em>Techno Hacks Edu Tech (Remote)</em></p>
+              <ul>
+                <li>
+                  Built high-accuracy ML models (Naive Bayes, Random Forest), achieving 99.8% in fraud detection, 
+                  96.6% in spam filtering, and 88.5% in sentiment analysis with GridSearchCV tuning.
+                </li>
+                <li>
+                  Led complete data science workflows with EDA, feature engineering, NLP (TF-IDF, NLTK), and SMOTE to handle class imbalance.
+                </li>
+              </ul>
+            </div>
+            <!-- End Resume Item -->
+
           </div>
         </div>
       </div>
       <div class="container">
         <p class="p-resume"><a
-            href="https://drive.google.com/file/d/1pE9Ub-NmxNVo-x7eib-u3scCGmuzW-jK/view?usp=sharing"
+            href="https://drive.google.com/file/d/1KXVYjw9Z_Bl3qwZfRPQTyLKSbmHi5eAp/view?usp=sharing"
             target="_blank">View
             Resume</a></p>
       </div>
