--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="https://mavenanalytics.io/profile/hamza_khader" target="_blank" class="maven"><i
+      <a href="https://mavenshowcase.com/profile/e8819380-20d1-70f8-aade-f2713e0b28ca" target="_blank" class="maven"><i
           class="bi bi-briefcase"></i></a>
       <a href="https://github.com/EngHamzaKhader" target="_blank" class="github"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/hamzakhader/" target="_blank" class="linkedin"><i
