--- a/index.html
+++ b/index.html
@@ -312,11 +312,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
         <p>
-          With a strong foundation in data science and analytics,
-          I bring a results-driven approach to solving real-world problems using data.
-          My experience spans data modeling, machine learning, and insightful visualizations—applied
-          across freelance and collaborative projects. This section highlights my background, technical expertise,
-          and hands-on experience in turning data into strategic decisions.
+          Curious Data Scientist with a Master’s in Data Science and 4+ years of experience transforming raw and business data into actionable insights. Experienced in Machine Learning, Deep Learning, NLP, and Computer Vision, with strong skills in Python, SQL, and visualization tools (Power BI, Tableau, Looker Studio). Passionate about enabling organizations to make data-driven decisions, foster innovation, and drive strategic growth.
         </p>
       </div>
       <!-- End Section Title -->
@@ -329,10 +325,11 @@
               <div class="resume-item pb-0">
                 
                 <p>
-                  <em>Data Analyst & Scientist with 2+ years of experience transforming data
-                    into actionable insights.
-                    Skilled in analysis, modeling, and visualization to support data-driven decisions and deliver results
-                    on time.</em>
+                  <em>With a strong foundation in data science and analytics,
+          I bring a results-driven approach to solving real-world problems using data.
+          My experience spans data modeling, machine learning, and insightful visualizations—applied
+          across freelance and collaborative projects. This section highlights my background, technical expertise,
+          and hands-on experience in turning data into strategic decisions.</em>
                 </p>
                 
               </div> -->
@@ -373,9 +370,27 @@
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Professional Experience</h3>
+                        <div class="resume-item">
+              <h4>Freelance Data Analyst & Data Scientist</h4>
+              <h5>Feb 2025 - Present</h5>
+              <p><em>Part Time (Remote)</em></p>
+              <ul>
+                <li>
+                  Collected, cleaned, and analyzed large datasets to identify patterns, trends, and actionable business insights.
+                </li>
+                <li>
+                  Built predictive machine learning models (classification, regression, clustering) to support data-driven decision-making.
+                </li>
+                <li>
+                  Designed interactive dashboards and visualizations (Power BI, Tableau, Python) to deliver insights to stakeholders.
+                </li>
+              </ul>
+            </div>
+            <!-- Edn Resume Item -->
+
             <div class="resume-item">
-              <h4>Data Analyst for Planning, Monitoring, and Research (PMR)</h4>
-              <h5>Oct 2024 - Apr 2025</h5>
+              <h4>Data Analyst & Scientist for Planning, Monitoring, and Research (PMR)</h4>
+              <h5>Oct 2024 - Sep 2025</h5>
               <p><em>UNICEF, Amman, Jordan </em></p>
               <ul>
                 <li>
@@ -395,66 +410,54 @@
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Analytics and Professional Career Development</h4>
-              <h5>Oct 2024 - Apr 2025</h5>
-              <p><em>Correlation One - USA (Remote)</em></p>
+              <h4>Data Scientist and AI</h4>
+              <h5>Apr 2024 - Sep 2024</h5>
+              <p><em>Techno Hacks Edu Tech (Remote) </em></p>
               <ul>
                 <li>
-                  Completed a competitive data analytics program (10% acceptance rate), mastering Python, SQL, data visualization, 
-                  and storytelling through real-world case studies and collaborative projects with diverse global teams.
-                </li>
-                <li>
-                  Led end-to-end data project using exploratory data analysis (EDA), hypothesis testing, 
-                  and dashboard creation to deliver actionable insights and present recommendations to industry professionals.
-                </li>
-              </ul>
-            </div>
-            <!-- End Resume Item -->
-
-            <div class="resume-item">
-              <h4>Data Scientist</h4>
-              <h5>Sep 2024 - Oct 2024</h5>
-              <p><em>Code Alpha (Remote)</em></p>
-              <ul>
-                <li>
-                  Created a Car Price Estimation model using Ridge and Lasso regression, achieving 98% model accuracy and reducing prediction error by 18%, 
-                  enabling better pricing strategies for over 5,000 vehicle listings.
-                </li>
-                <li>
-                  Engineered machine learning models including Iris Flower Classification (96.67% accuracy), and Advertising Impact on Sales utilizing Python (Pandas, Scikit-learn), 
-                  EDA, and regression techniques to refine business forecasting and decision-making.
-                </li>
-              </ul>
-            </div>
-            <!-- End Resume Item -->
-
-            <div class="resume-item">
-              <h4>Machine Learning Engineer</h4>
-              <h5>Aug 2024 - Sep 2024</h5>
-              <p><em>Techno Hacks Edu Tech (Remote)</em></p>
-              <ul>
-                <li>
-                  Implemented predictive models: XGBoost for housing prices (R² = 0.91), 
-                  SVM for diabetes detection (AUC = 0.84), and ensemble NLP classifier for sentiment analysis (89% accuracy).
+                  Implemented predictive models: XGBoost for housing prices (R² = 0.91), SVM for diabetes detection (AUC = 0.84), and ensemble NLP classifier for sentiment analysis (89% accuracy).
                 </li>
                 <li>
                   Executed full ML pipeline: EDA, feature engineering, scaling, tuning, and visualization (ROC, heatmaps, confusion matrix).
                 </li>
+                <li>
+                  Built high-accuracy ML models (Naive Bayes, Random Forest), achieving 99.8% in fraud detection, 96.6% in spam filtering, and 88.5% in sentiment analysis with GridSearchCV tuning.
+                </li>
+              </ul>
+            </div>
+            <!-- Edn Resume Item -->
+
+            <div class="resume-item">
+              <h4>Data Analytics and Career Development</h4>
+              <h5>Oct 2023 - Apr 2024</h5>
+              <p><em>Correlation One - USA (Remote)</em></p>
+              <ul>
+                <li>
+                  Executed end-to-end data analysis projects using SQL, Python, R, Excel, Tableau, and Looker Studio, applying EDA, hypothesis testing, and CRISP-DM methodology to generate actionable business insights.
+                </li>
+                <li>
+                  Developed and delivered interactive dashboards, reports, and visualizations for stakeholders, enhancing decision-making processes.
+                </li>
+                <li>
+                  Applied problem-solving, critical thinking, attention to detail, and communication skills to support data-driven strategies and business intelligence initiatives.
+                </li>
               </ul>
             </div>
             <!-- End Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Scientist</h4>
-              <h5>Jul 2024 - Aug 2024</h5>
-              <p><em>Techno Hacks Edu Tech (Remote)</em></p>
+              <h4>Business Intelligence Analyst</h4>
+              <h5>Aug 2020 - Sep 2023</h5>
+              <p><em>INCUBE FZCO - Jordan (Hybrid)</em></p>
               <ul>
                 <li>
-                  Built high-accuracy ML models (Naive Bayes, Random Forest), achieving 99.8% in fraud detection, 
-                  96.6% in spam filtering, and 88.5% in sentiment analysis with GridSearchCV tuning.
+                  Performed business analysis and managed datasets of up to 50,000+ records, applying SQL, Python, and ETL processes to enable predictive analytics and foundational AI applications.
                 </li>
                 <li>
-                  Led complete data science workflows with EDA, feature engineering, NLP (TF-IDF, NLTK), and SMOTE to handle class imbalance.
+                  Designed and maintained interactive dashboards in Power BI, Tableau, Excel, and Looker Studio, delivering actionable insights that improved decision-making by 20% and operational efficiency by 15%.
+                </li>
+                <li>
+                  Collaborated with cross-functional teams, monitored KPIs, and developed simple predictive models using Python (Pandas, NumPy, Matplotlib, Seaborn, Scikit-learn), translating data into actionable business strategies.
                 </li>
               </ul>
             </div>
