--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@
                   <i class="bi bi-envelope flex-shrink-0"></i>
                   <div>
                     <h3>Email Me</h3>
-                    <p>eng,hamzakhader@gmail.com</p>
+                    <p>eng.hamzakhader@gmail.com</p>
                   </div>
                 </div>
                 <!-- End Info Item -->
