--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
         <p>
-          Curious Data Scientist with a Master’s in Data Science and 4+ years of experience transforming raw and business data into actionable insights. Experienced in Machine Learning, Deep Learning, NLP, and Computer Vision, with strong skills in Python, SQL, and visualization tools (Power BI, Tableau, Looker Studio). Passionate about enabling organizations to make data-driven decisions, foster innovation, and drive strategic growth.
+          Curious Data Scientist with a Master’s in Data Science and 5 years of experience transforming raw and business data into actionable insights. Experienced in Machine Learning, Deep Learning, NLP, and Computer Vision, with strong skills in Python, SQL, and visualization tools (Power BI, Tableau, Looker Studio). Passionate about enabling organizations to make data-driven decisions, foster innovation, and drive strategic growth.
         </p>
       </div>
       <!-- End Section Title -->
@@ -354,7 +354,7 @@
 
             <div class="resume-item">
               <h4>Bachelor of Engineering in Computer and Communications</h4>
-              <h5>2017 - 2022</h5>
+              <h5>2016 - 2022</h5>
               <p><em>Al-Zaytoonah University, Amman, Jordan</em></p>
               <p>
                 Provided a strong foundation in core engineering principles, focusing on computer systems, programming, 
@@ -389,7 +389,7 @@
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Analyst & Scientist for Planning, Monitoring, and Research (PMR)</h4>
+              <h4>Data Scientist for Planning, Monitoring, and Research (PMR)</h4>
               <h5>Oct 2024 - Sep 2025</h5>
               <p><em>UNICEF, Amman, Jordan </em></p>
               <ul>
@@ -410,7 +410,7 @@
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Scientist and AI</h4>
+              <h4>Data Scientist</h4>
               <h5>Apr 2024 - Sep 2024</h5>
               <p><em>Techno Hacks Edu Tech (Remote) </em></p>
               <ul>
@@ -428,7 +428,7 @@
             <!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Data Analytics and Career Development</h4>
+              <h4>Data Analyst</h4>
               <h5>Oct 2023 - Apr 2024</h5>
               <p><em>Correlation One - USA (Remote)</em></p>
               <ul>
