--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <h2 style="font-size: 40px;">Hamza Khader</h2>
         <p>
           I'm a
-          <span class="typed" data-typed-items="Data Analyst, Data Scientist, Freelancer">Data Analyst</span><span
+          <span class="typed" data-typed-items="Data Scientist, Data Analyst, Machine Learning (ML) Engineer, Deep Learning (DL) Engineer, NLP Engineer, Computer Vision Engineer, Freelancer">Data Analyst</span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span
             class="typed-cursor typed-cursor--blink" aria-hidden="true"></span>
         </p>
